--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>euraka-server</artifactId>
+    <artifactId>eureka-server</artifactId>
 
 
 </project>
