--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>spring-clound-netflix-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>euraka-server</module>
+        <module>eureka-server</module>
         <module>account-service</module>
         <module>client-app</module>
     </modules>
