--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -3,23 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>account-service</artifactId>
+        <artifactId>spring-clound-netflix-demo</artifactId>
         <groupId>io.ltebean</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>account-server</artifactId>
+    <artifactId>config-server</artifactId>
     <dependencies>
-
-        <dependency>
-            <groupId>io.ltebean</groupId>
-            <artifactId>account-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-client</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
     </dependencies>
 
