--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>eureka-server</module>
         <module>account-service</module>
         <module>client-app</module>
+        <module>config-server</module>
     </modules>
     <packaging>pom</packaging>
 
