--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>account-api</module>
         <module>account-server</module>
+        <module>account-biz</module>
     </modules>
 
 </project>
