--- a/account-service/account-biz/pom.xml
+++ b/account-service/account-biz/pom.xml
@@ -9,18 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>account-server</artifactId>
-    <dependencies>
+    <artifactId>account-biz</artifactId>
 
+    <dependencies>
         <dependency>
             <groupId>io.ltebean</groupId>
-            <artifactId>account-biz</artifactId>
+            <artifactId>account-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-client</artifactId>
-        </dependency>
     </dependencies>
-
 </project>
