--- a/account-web/pom.xml
+++ b/account-web/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>client-app</artifactId>
+    <artifactId>account-web</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>io.ltebean</groupId>
-            <artifactId>account-api</artifactId>
+            <artifactId>account-biz</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
