--- a/account-web/src/main/resources/application.yml
+++ b/account-web/src/main/resources/application.yml
@@ -3,6 +3,16 @@ spring:
   application:
      name: client
 
+  datasource:
+    username: dev
+    password: 111111
+    url: jdbc:mysql://localhost:3306/Goodtalk?useUnicode=true&characterEncoding=utf-8
+    driver-class-name: com.mysql.jdbc.Driver
+    type: org.apache.tomcat.jdbc.pool.DataSource
+
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
+
 # Discovery Server Access
 eureka:
   client:
