--- a/photo-service/photo-biz/pom.xml
+++ b/photo-service/photo-biz/pom.xml
@@ -3,21 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>account-service</artifactId>
+        <artifactId>photo-service</artifactId>
         <groupId>io.ltebean</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>account-biz</artifactId>
+    <artifactId>photo-biz</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>io.ltebean</groupId>
-            <artifactId>account-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
         <dependency>
             <groupId>io.ltebean</groupId>
             <artifactId>photo-api</artifactId>
