--- a/account-service/account-server/src/main/resources/application.yml
+++ b/account-service/account-server/src/main/resources/application.yml
@@ -3,5 +3,16 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
+spring:
+  datasource:
+    username: dev
+    password: 111111
+    url: jdbc:mysql://localhost:3306/Goodtalk?useUnicode=true&characterEncoding=utf-8
+    driver-class-name: com.mysql.jdbc.Driver
+    type: org.apache.tomcat.jdbc.pool.DataSource
+
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
+
 server:
   port: 9000
