--- a/account-web/pom.xml
+++ b/account-web/pom.xml
@@ -14,13 +14,17 @@
     <dependencies>
         <dependency>
             <groupId>io.ltebean</groupId>
-            <artifactId>account-biz</artifactId>
+            <artifactId>account-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
-            <groupId>io.ltebean</groupId>
-            <artifactId>photo-biz</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
         </dependency>
 
 
