--- a/account-web/src/main/resources/application.yml
+++ b/account-web/src/main/resources/application.yml
@@ -1,25 +1,16 @@
-# Spring properties
-spring:
-  application:
-     name: client
-
-  datasource:
-    username: dev
-    password: 111111
-    url: jdbc:mysql://localhost:3306/Goodtalk?useUnicode=true&characterEncoding=utf-8
-    driver-class-name: com.mysql.jdbc.Driver
-    type: org.apache.tomcat.jdbc.pool.DataSource
-
-mybatis:
-  mapper-locations: classpath*:mapper/*.xml
-
-# Discovery Server Access
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-    registerWithEureka: false
+    registerWithEureka: true
 
-# HTTP Server
 server:
   port: 8080
+
+ribbon:
+  ActiveConnectionsLimit: 10
+  ConnectTimeout: 1000
+  ReadTimeout: 1000
+  OkToRetryOnAllOperations: true
+  MaxAutoRetriesNextServer: 2
+  MaxAutoRetries: 2
