--- a/account-service/account-server/src/main/resources/application.yml
+++ b/account-service/account-server/src/main/resources/application.yml
@@ -16,6 +16,10 @@ mybatis:
   mapper-locations: classpath*:mapper/*.xml
 
 
+endpoints:
+  shutdown:
+    enabled: true
+    sensitive: false
 
 server:
   port: 9000
