--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   account-service:
     # replace username/repo:tag with your name and image details
-    image: account-service:v13
+    image: account-service
     deploy:
       replicas: 2
       update_config:
